--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,11 +22,11 @@
 
           <div class="post-form-input">
             <label for="near">Near</label>
-            <input type="text" id="near" name="query[near]">
+            <input type="text" id="near" name="query[near]" value="<%=  %>">
           </div>
 
           <div class="post-form-submit">
-            <input type="submit" id="search-button" value="Search">
+            <input type="submit" id="search-button" value="">
           </div>
         </form>
 
