--- a/app/views/layouts/backbone.html.erb
+++ b/app/views/layouts/backbone.html.erb
@@ -14,7 +14,7 @@
       </h1>
 
       <div class="header-middle">
-        <form class="search-form" action="<%= search_url %>" method="get">
+        <form class="search-form" action="/search" method="get">
           <div class="post-form-input">
             <label for="find">Find</label>
             <input type="text" id="find" name="query[find]">
@@ -26,7 +26,7 @@
           </div>
 
           <div class="post-form-submit">
-            <input type="submit" id="search-button" value="Search">
+            <input type="submit" id="search-button" value="">
           </div>
         </form>
 
