--- a/app/views/reviews/_business_reviews.html.erb
+++ b/app/views/reviews/_business_reviews.html.erb
@@ -5,7 +5,7 @@
     <article class="review">
       <div class="user-thumb">
           <% if review.author.avatar %>
-            <img src="<%= asset_path(review.author.avatar.url(:thumb)) %>">
+            <img src="<%= review.author.avatar.url(:thumb) %>">
           <% end %>
       </div>
       <div class="review-headline"><a href="<%= user_url review.author %>"><%= user_name(review.author)  %></a></div>
