--- a/app/views/layouts/backbone.html.erb
+++ b/app/views/layouts/backbone.html.erb
@@ -35,7 +35,7 @@
             <li><a class="no-underline" href="/">Home</a></li>
 
             <% if current_user %>
-              <li><a class="no-underline" href="<%= user_url current_user %>">About Me</a></li>
+              <li><a class="no-underline" href="#/users/<%= current_user.id %>">About Me</a></li>
             <% else %>
               <li><a class="no-underline" href="<%= new_user_url %>">About Me</a></li>
             <% end %>
@@ -53,7 +53,7 @@
             <% end %>
           </div>
           <ul class="header-dropdown">
-            <li><a class="no-underline" href="<%= user_url current_user %>">About Me</a></li>
+            <li><a class="no-underline" href="#/users/<%= current_user.id %>">About Me</a></li>
             <li><a class="no-underline" href="<%= search_url %>">Write a Review</a></li>
             <li><a class="no-underline" href="<%= new_business_url %>">Add a Business</a></li>
             <li><%= button_to "Log Out", session_url, method: :delete %></li>
