--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,26 +1,25 @@
 <section class="user-profile">
-  <section class="user-greeting">
-  <% if @user.nickname %>
-    <h2><%= @user.fname + " \"" + @user.nickname + "\" " + @user.lname[0] %>.'s Profile</h2>
-  <% else %>
-    <h2><%= @user.fname + " " + @user.lname[0] %>.'s Profile</h2>
-  <% end %>
+  <section class="user-greeting group">
+    <% if @user.nickname %>
+      <h2><%= @user.fname + " \"" %><em><%= @user.nickname %></em> <%= "\" " + @user.lname[0] %>.'s Profile</h2>
+    <% else %>
+      <h2><%= @user.fname + " " + @user.lname[0] %>.'s Profile</h2>
+    <% end %>
 
-  <% if @user == current_user %>
-    <a href="<%= edit_user_url @user %>">
-      <%= @user.nickname ? "[Edit nickname]" : "[Add nickname]" %></a>
-  <% end  %>
+    <% if @user == current_user %>
+      <a class="nickname" href="<%= edit_user_url @user %>">
+        <%= @user.nickname ? "[Edit nickname]" : "[Add nickname]" %></a>
+    <% end  %>
   </section>
+
   <section class="user-info">
     <div class="user-thumb">
-      <% if @user.avatar %>
-        <img src="<%= @user.avatar.url(:profile) %>">
-      <% end %>
+      <img src="<%= @user.avatar.url(:profile) %>">
     </div>
 
     <!-- <p>&#9733; Follower Count...</p> -->
 
-    <ul class="user-info">
+    <ul class="user-data">
       <% if @user != current_user %>
         <li>&hearts;<a href="#">Follow this Reviewer</a></li>
       <% end %>
