--- a/app/assets/templates/pages/home.jst.ejs
+++ b/app/assets/templates/pages/home.jst.ejs
@@ -32,8 +32,8 @@
       <br>
       <textarea id="review-content" name="review[content]"></textarea>
 
-      <a class="cancel" href="#">Cancel</a>
-      <input type="submit" class="post-submit" value="Post Review">
+      <a class="cancel btons" href="#">Cancel</a>
+      <input type="submit" class="post-submit btons" value="Post Review">
     </form>
 </div>
 
