--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -111,5 +111,13 @@
       </div>
     </div>
   </footer>
+
+  <script>
+    $(document).ready(function() {
+      $('#review-content').click(function() {
+        $('#review-content').toggleClass("show");
+      });
+    });
+  </script>
 </body>
 </html>
